Updated error types
